ensemle model added

--- a/templates/index.html
+++ b/templates/index.html
@@ -195,7 +195,7 @@
         <option>XGBoost</option>
       </optgroup>
 
-      <optgroup label="📈 Linear Models">
+      <optgroup label="Linear Models">
         <option>Logistic Regression</option>
         <option>Lasso (SGDClassifier)</option>
         <option>Ridge Classifier</option>
@@ -203,7 +203,7 @@
         <option>Passive Aggressive</option>
       </optgroup>
 
-      <optgroup label="⚙️ Kernel & Distance Models">
+      <optgroup label="Kernel & Distance Models">
         <option>SVM (RBF)</option>
         <option>KNN</option>
       </optgroup>
@@ -213,12 +213,16 @@
         <option>Bagging</option>
       </optgroup>
 
-      <optgroup label="🔍 Probabilistic Models">
+      <optgroup label="Probabilistic Models">
         <option>Naive Bayes</option>
       </optgroup>
 
-      <optgroup label="🧠 Deep Learning">
+      <optgroup label="Deep Learning">
         <option>Deep Learning (MLP)</option>
+      </optgroup>
+
+      <optgroup label="Ensemble Blending">
+        <option>Ensemble Blending</option>
       </optgroup>
 
       <optgroup label="✨ Auto Selection">
